--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   get: ^4.6.5
   shadowed_image: ^1.0.3
   bordered_text: ^2.0.0
+  share_plus:
+  just_audio:
+  url_launcher: ^6.1.11
+  flutter_advanced_drawer: ^1.3.5
+  appinio_video_player: ^1.2.1
+  youtube_player_flutter: ^8.1.2
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +70,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/asset_image/
+    - assets/asset_music/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
