--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,14 +36,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.5
-  shadowed_image: ^1.0.3
   bordered_text: ^2.0.0
   share_plus:
   just_audio:
   url_launcher: ^6.1.11
   flutter_advanced_drawer: ^1.3.5
-  appinio_video_player: ^1.2.1
-  youtube_player_flutter: ^8.1.2
+  firebase_core:
+  firebase_database:
+  flick_video_player:
+  video_player: ^2.6.1
 
 dev_dependencies:
   flutter_test:
