--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_database:
   flick_video_player:
   video_player: ^2.6.1
+  cached_network_image:
 
 dev_dependencies:
   flutter_test:
