--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,8 @@ dependencies:
   flutter_advanced_drawer: ^1.3.5
   firebase_core:
   firebase_database:
-  flick_video_player:
-  video_player: ^2.6.1
+  flick_video_player: ^0.5.0
+  video_player: ^2.7.0
   cached_network_image:
 
 dev_dependencies:
