--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flick_video_player: ^0.5.0
   video_player: ^2.7.0
   cached_network_image:
+  flutter_app_lock: ^3.0.0
 
 dev_dependencies:
   flutter_test:
